# overthink

./: .containerignore  .env.example  .envrc  .gitignore  .gitmodules  .mcp.json  CHANGELOG.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  Taskfile.yml  VISION.md  android.yml  arch-base.yml  base.yml  box.yml  build.json  build.yml  builder.yml  charly.yml  deploy.yml  eval.yml  fedora-base.yml  go.work  harness.yml  image.yml  images.yml  init.yml  k8s.yml  local.yml  overthink.yml  pod.yml  setup.sh  vm.yml  vms.yml
.claude/: settings.json
CHANGELOG/: 2026-04.md  2026-05.md  2026-06.md  2026-07.md  README.md
candy/: CLAUDE.md
candy/jupyter-mcp/jupyter_mcp/: pyproject.toml
charly/: .golangci.yml  CLAUDE.md  adb.go  adb_test.go  adb_ui_test.go  agent_config.go  agent_config_test.go  agent_forward.go  agent_forward_test.go  ai_config.go  alias.go  alias_test.go  android_deploy_cmd.go  android_deploy_preresolve.go  android_deploy_preresolve_test.go  android_hostport_test.go  android_install.go  android_install_test.go  android_loader_test.go  android_plugin.go  android_spec.go  android_spec_test.go  android_target.go  apk_format_test.go  appium.go  appium_session.go  appium_session_test.go  appium_test.go  arbiter_dispatch_test.go  arbiter_host.go  aur_replaces_test.go  bootstrap_phase.go  box_labels_cmd.go  box_labels_cmd_test.go  box_selection_test.go  browser_cdp.go  build.go  build.yml  build_emit_test.go  build_jobs_test.go  (+942 more)
config/: disk.toml  iso-gnome.toml
docs/: status.md
layers/: CLAUDE.md
ov/: CLAUDE.md  adb.go  adb_test.go  agent_forward.go  (+584 more)
(+1898 files in other folders)
